fix: blurry space-header

--- a/scss/_custom-settings.scss
+++ b/scss/_custom-settings.scss
@@ -384,6 +384,15 @@ a {
 	flex: 1;
 }
 
+.line-clamp {
+	-webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    hyphens: auto;
+    overflow: hidden;
+	display: -webkit-box;
+    display: box;
+}
+
 .hover-underline:hover {
 	text-decoration: underline;
 }
@@ -690,24 +699,25 @@ label[for] {
 // ---------
 
 .space-title {
+	// add below: text-truncate
 	@extend .card-title;
 
-	line-height: 1;
-	position: absolute;
+	line-height: 1.2rem;
 	display: flex;
-	padding: 0.35rem 0.75rem;
-	z-index: 1;
-	color: $body-font-color;
-	background: rgba($white, 0.75);
-	backdrop-filter: (20px) saturate(200%);
-	backdrop-filter: blur(20px) saturate(200%);
-	left: 0;
-	top: 70%;
-	// calc solves blurry font (win10). https://stackoverflow.com/questions/32034574/font-looks-blurry-after-translate-in-chrome
-	transform: translateY( calc( -50% + 0.5px ) );
-	max-width: 80% !important; // .text-truncate will otherwise override with 100%
-	border-radius: 0 2px 2px 0;
-	align-items: center;
+    margin: auto 0;
+    padding: 0.35rem 0.5rem;
+    z-index: 1;
+    color: #333;
+    background: rgba(255,255,255,0.6);
+    -webkit-box-orient: vertical;
+    -webkit-backdrop-filter: 20px saturate(200%);
+    backdrop-filter: 20px saturate(200%);
+    -webkit-backdrop-filter: blur(20px) saturate(200%);
+    backdrop-filter: blur(20px) saturate(200%);
+    max-width: 80% !important;
+    margin-bottom: 5%;
+    border-radius: 0 2px 2px 0;
+    align-items: center;
 
 	// span {
 	//   white-space: nowrap;
